# zeus

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: deploy.rs  dismiss.rs  main.rs  setup.rs  upgrade.rs  util.rs
src/templates/: config.yaml.mustache
src/util/: config.rs  git.rs  logger.rs  services.rs
