[package]
name = "zeus"
version = "1.0.0"
authors = ["EmperDeon <emperdeon@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

# Logging
log = "0.4.14"
simplelog = "0.10.0"
chrono = "0.4.19"
text_io = "0.1.8"

# Path helpers
path-absolutize = "3.0.10"
dirs = "3.0.2"

# YAML parsing and writing
mustache = "0.9.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_yaml = "0.8.17"

# Repositories
git2 = "0.13.20"
