[package]
name = "monal-zeus"
version = "1.1.0"
authors = ["Monal <admin@monal.tech>", "EmperDeon <emperdeon@protonmail.com>"]
edition = "2018"
description = "Utility application for setting up and deploying services"
homepage  = "https://github.com/EmperDeon/zeus"
repository = "https://github.com/EmperDeon/zeus"
documentation = "https://github.com/EmperDeon/zeus"

license = "MIT"
categories = ["command-line-utilities", "development-tools"]

[profile.release]
lto = true

[dependencies]
clap = "3.0.0-beta.2"

# Logging
log = "0.4.14"
simplelog = "0.10.0"
chrono = "0.4.19"
text_io = "0.1.8"

# Path helpers
path-absolutize = "3.0.10"
dirs = "3.0.2"

# YAML parsing and writing
mustache = "0.9.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_yaml = "0.8.17"

# Repositories
git2 = "0.13.20"
